# devvault

./: .gitattributes  .gitignore  ARCHITECTURE_LOG.md  BOOTSTRAP.md  BUILD_LOG.md  DEVVAULT_VM_FIRST_OWNER_VALIDATION.md  DISASTER_DRILLS.md  DevVault.spec  LAUNCH_EVIDENCE_MATRIX.md  PROJECT_STATUS.md  README.md  RUNBOOK.md  SYSTEMS_LEDGER.md  installer.iss  pyproject.toml
.drill_work/: backup.json  escrow.json  key_export_cmd.json  restore.json  verify.json
MD/: CHAT_CONTEXT_FULL.md  CHAT_CONTEXT_LIGHT.md  Dump-DevVaultContext.ps1  RUNBOOK.md  SMOKE_TEST.md  SYSTEMS_LEDGER.md
devvault/: __main__.py  cli.py  feature_flags.py  formatters.py  licensing.py  notifications.py  refusal_codes.py  reminder_agent.py  reminder_state.py  validation_client.py  validation_state.py
devvault_desktop/: __main__.py  app.py  business_fetchers.py  business_fleet_status.py  business_models.py  business_protection_state.py  business_runtime_config.py  business_seat_api.py  business_seat_models.py  business_service_worker.py  business_vault_authority.py  business_vault_bootstrap.py  business_worker_backup_entry.py  business_worker_service.py  config.py  coverage_assurance.py  coverage_dialog.py  engine_subprocess.py  first_run_gate.py  license_gate.py  nas_auth.py  nas_enforcement.py  preflight_dialog.py  qt_app.py  reporting.py  restore_preflight.py  runner.py  seat_registry.py  setup_flow.py  snapshot_picker.py  vault_gate.py  winmon.py
docs/: cli-contract.md
docs_internal/: LAUNCH_EVIDENCE_MATRIX.md
installer/: devvault.iss
scanner/: backup_engine.py  checksum.py  cloud_file_guard.py  engine.py  errors.py  integrity_keys.py  main.py  manifest_integrity.py  manifest_schema.py  restore_engine.py  snapshot.py  snapshot_index.py  snapshot_listing.py  snapshot_metadata.py  snapshot_rows.py  vault_health.py  vault_key_shared.py  vault_key_windows.py  verify_engine.py
scripts/: build_chat_context.py  copy_chat_context_light.ps1  launch_devvault_chat_light.cmd
tests/: test_backup_engine.py  test_business_fleet_status.py  test_business_protection_state.py  test_business_service_worker.py  test_checksum.py  test_cli_contract.py  test_cli_json_contract.py  (+23 more)
(+25 files in other folders)
