[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devvault"
version = "0.1.0"
description = "Scan for development projects, estimate backup size, and flag risk signals (git/readme/tests)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Braden Turner" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
devvault = "devvault.__main__:main"
devvault-desktop = "devvault_desktop.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["devvault*", "scanner*", "devvault_desktop*"]

